--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,6 @@
             ],
             "styles": [
               "src/custom-theme.scss",
-              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -98,8 +97,7 @@
               "src/_redirects"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js"
