--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -27,12 +28,15 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.17",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
+    "datatables.net": "^2.0.1",
+    "datatables.net-bs4": "^2.0.1",
+    "datatables.net-dt": "^2.0.1",
+    "datatables.net-plugins": "^1.13.6",
     "jquery": "^3.7.1",
     "postcss": "^8.4.35",
     "rxjs": "~7.8.0",
     "sortablejs": "^1.15.2",
-    "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -41,7 +45,9 @@
     "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^17.0.0",
     "@angular/localize": "^17.0.0",
+    "@types/datatables.net": "^1.10.28",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.29",
     "@types/sortablejs": "^1.15.8",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
